--- a/portfolio.html
+++ b/portfolio.html
@@ -75,9 +75,16 @@
           <h1 class="galery-hidden">Gallery of works</h1>
           <ul class="gallery-list list dflist-gallery">
             <li class="gallery-item">
-              <img src="./images/app-1.jpg" alt="pages" height="300" width="360" />
-                <div class="gallery-wraper">
+              <div class="gallery-overlay-wraper">
+                <img src="./images/app-1.jpg" alt="pages" height="300" width="360" />
+                <div class="text-overlay-wraper">
+                  <p class="overlay-text">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div> 
+              </div>
+ 
+              <div class="gallery-wraper">
                   <h2 class="gallery-title">Banking App Interface Concept</h2>
+                  
                   <p class="gallery-text">App</p>
                 </div>
             </li>
